--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -4,4 +4,8 @@
         android:key="pref_observer_id"
         android:title="@string/pref_observer_id"
         android:summary="@string/pref_observer_id_summ" />
+    <EditTextPreference
+    	android:key="pref_upload_server"
+    	android:title="@string/pref_upload_server"
+    	android:defaultValue="http://meteor1.astozor.cz:3003/report" />
 </PreferenceScreen>
