--- a/app/src/main/res/values/themes_meteorobserver.xml
+++ b/app/src/main/res/values/themes_meteorobserver.xml
@@ -13,6 +13,7 @@
     <!--<item name="android:textColorSecondary">@color/material_white_30</item>-->
     <!--<item name="android:textColorTertiary">@color/material_white_30</item>-->
     <!--<item name="android:windowBackground">@color/material_black_100</item>-->
+    <item name="homeAsUpIndicator">@drawable/abc_ic_ab_back_mtrl_am_alpha</item>
   </style>
 
   <style name="Theme.MeteorObserver.Red">
