--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
-        android:key="pref_observer_id"
+        android:key="@string/pref_observer_id_key"
         android:title="@string/pref_observer_id_title"
         android:summary="@string/pref_observer_id_summary" />
     <EditTextPreference
-    	android:key="pref_upload_server"
+    	android:key="@string/pref_upload_server_id_key"
     	android:title="@string/pref_upload_server_title"
     	android:defaultValue="http://meteor1.astrozor.cz:3003/report" />
 </PreferenceScreen>
