--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,11 +13,15 @@
         <item name="colorPrimary">@color/material_black_100</item>
         <item name="colorPrimaryDark">@color/material_black_100</item>
         <item name="colorAccent">@color/material_red_a700</item>
+
         <item name="android:textColorPrimary">@color/material_red_a700</item>
         <item name="android:textColorSecondary">@color/material_red_a700</item>
         <item name="android:textColorTertiary">@color/material_red_a700</item>
-        <item name="android:windowBackground">@color/material_black_100</item>
         <!--<item name="android:textColorHighlight">#99d50000</item>-->
+
+        <item name="android:windowBackground">@color/material_black_100</item>
+        <item name="android:colorBackground">@color/material_grey_900</item>
+
         <item name="alertDialogTheme">@style/Theme.MeteorObserver.Red.Dialog.Alert</item>
     </style>
 
@@ -36,6 +40,10 @@
         <item name="android:textColorSecondary">@color/material_red_a700</item>
         <item name="android:textColorTertiary">@color/material_red_a700</item>
         <item name="android:windowBackground">@drawable/dialog_background</item>
+    </style>
+
+    <style name="ThemeOverlay.MeteorObserver.Red" parent="ThemeOverlay.AppCompat.Dark">
+
     </style>
 
 </resources>
