--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="mo_window_background_color">#000</color>
-    <color name="mo_text_color">#f00</color>
-    <color name="mo_divider_color">#2f00</color>
+    <!--<color name="mo_window_background_color">#000</color>-->
+    <!--<color name="mo_text_color">#f00</color>-->
+    <color name="mo_divider">#2f00</color>
+    <color name="mo_text_highlight">#6f00</color>
+    <color name="mo_ripple">#4f00</color>
 </resources>
