--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,23 +6,30 @@
     <style name="Base.Theme.MeteorObserver" parent="Theme.AppCompat">
         <item name="colorAccent">@color/material_red_500</item>
         <item name="alertDialogTheme">@style/Theme.MeteorObserver.Dialog.Alert</item>
-        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.Fixed</item>
+        <item name="textAppearanceListItemSecondary">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="actionBarStyle">@style/Widget.MeteorObserver.ActionBar.Solid</item>
+        <item name="android:textColorHighlight">@color/mo_text_highlight</item>
     </style>
 
     <style name="Theme.MeteorObserver.Red">
-        <item name="colorPrimary">@color/material_black_100</item>
-        <item name="colorPrimaryDark">@color/material_black_100</item>
+        <item name="colorPrimary">@android:color/black</item>
+        <item name="colorPrimaryDark">@android:color/black</item>
         <item name="colorAccent">@color/material_red_a700</item>
+
+        <item name="colorControlHighlight">@color/mo_ripple</item>
+        <item name="android:textColorHighlight">@color/mo_text_highlight</item>
 
         <item name="android:textColorPrimary">@color/material_red_a700</item>
         <item name="android:textColorSecondary">@color/material_red_a700</item>
         <item name="android:textColorTertiary">@color/material_red_a700</item>
-        <!--<item name="android:textColorHighlight">#99d50000</item>-->
 
-        <item name="android:windowBackground">@color/material_black_100</item>
+        <item name="android:windowBackground">@android:color/black</item>
         <item name="android:colorBackground">@color/material_grey_900</item>
 
         <item name="alertDialogTheme">@style/Theme.MeteorObserver.Red.Dialog.Alert</item>
+
+        <item name="actionBarStyle">@style/Widget.AppCompat.ActionBar</item>
     </style>
 
     <style name="Theme.MeteorObserver" parent="Base.Theme.MeteorObserver">
@@ -30,20 +37,23 @@
 
     <style name="Theme.MeteorObserver.Dialog.Alert" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">@color/material_red_500</item>
+        <item name="android:textColorHighlight">@color/mo_text_highlight</item>
     </style>
 
     <style name="Theme.MeteorObserver.Red.Dialog.Alert" parent="Theme.AppCompat.Dialog.Alert">
-        <item name="colorPrimary">@color/material_black_100</item>
-        <item name="colorPrimaryDark">@color/material_black_100</item>
+        <item name="colorPrimary">@android:color/black</item>
+        <item name="colorPrimaryDark">@android:color/black</item>
         <item name="colorAccent">@color/material_red_a700</item>
+
+        <item name="colorControlHighlight">@color/mo_ripple</item>
+        <item name="android:textColorHighlight">@color/mo_text_highlight</item>
+
         <item name="android:textColorPrimary">@color/material_red_a700</item>
         <item name="android:textColorSecondary">@color/material_red_a700</item>
         <item name="android:textColorTertiary">@color/material_red_a700</item>
+
         <item name="android:windowBackground">@drawable/dialog_background</item>
-    </style>
-
-    <style name="ThemeOverlay.MeteorObserver.Red" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="android:colorBackground">@color/material_grey_900</item>
 
     </style>
-
 </resources>
