--- a/app/src/main/res/layout/activity_observer.xml
+++ b/app/src/main/res/layout/activity_observer.xml
@@ -1,86 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/material_vertical_margin"
-    android:paddingLeft="@dimen/material_horizontal_margin"
-    android:paddingRight="@dimen/material_horizontal_margin"
-    android:paddingTop="@dimen/material_vertical_margin"
-    tools:context=".activities.ObserverActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/ori_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="@string/mo_orientation"
-        android:textColor="#cc0000"
-        android:textSize="18sp"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/ori"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:textColor="#cc0000"
-        android:textSize="18sp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingBottom="@dimen/material_vertical_margin"
+        android:paddingLeft="@dimen/material_horizontal_margin"
+        android:paddingRight="@dimen/material_horizontal_margin"
+        android:paddingTop="@dimen/material_vertical_margin"
+        tools:context=".activities.ObserverActivity">
 
-    <TextView
-        android:id="@+id/time_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/ori_desc"
-        android:text="@string/mo_time"
-        android:textColor="#cc0000"
-        android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/ori_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:text="@string/mo_orientation"
+            android:textColor="#cc0000"
+            android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/ori_desc"
-        android:textColor="#cc0000"
-        android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/ori"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:textColor="#cc0000"
+            android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/loc_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/time_desc"
-        android:text="@string/mo_location"
-        android:textColor="#cc0000"
-        android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/time_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/ori_desc"
+            android:text="@string/mo_time"
+            android:textColor="#cc0000"
+            android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/loc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/time_desc"
-        android:text="@string/mo_unknown"
-        android:textColor="#cc0000"
-        android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/ori_desc"
+            android:textColor="#cc0000"
+            android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/instruct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material"
-        android:gravity="center"
-        android:textColor="#cc0000"
-        android:textSize="30sp"
-        tools:text="@string/mo_instruction_init"/>
+        <TextView
+            android:id="@+id/loc_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/time_desc"
+            android:text="@string/mo_location"
+            android:textColor="#cc0000"
+            android:textSize="18sp"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/loc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/time_desc"
+            android:text="@string/mo_unknown"
+            android:textColor="#cc0000"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:id="@+id/instruct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="@dimen/abc_action_bar_default_height_material"
+            android:gravity="center"
+            android:textColor="#cc0000"
+            android:textSize="30sp"
+            tools:text="@string/mo_instruction_init"/>
+
+    </RelativeLayout>
+</LinearLayout>
