--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,18 +5,25 @@
 
     <style name="Base.Theme.MeteorObserver" parent="Theme.AppCompat">
         <item name="colorAccent">@color/material_red_500</item>
+        <item name="android:textColorHighlight">@color/mo_text_highlight</item>
+
         <item name="alertDialogTheme">@style/Theme.MeteorObserver.Dialog.Alert</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.Fixed</item>
-        <item name="textAppearanceListItemSecondary">@style/TextAppearance.AppCompat.Body1</item>
+
         <item name="actionBarStyle">@style/Widget.MeteorObserver.ActionBar.Solid</item>
-        <item name="android:textColorHighlight">@color/mo_text_highlight</item>
+
+        <item name="textAppearanceListItemSecondary">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="listPreferredItemHeight">56dp</item>
+        <item name="listPreferredItemHeightLarge">72dp</item>
+    </style>
+
+    <style name="Theme.MeteorObserver" parent="Base.Theme.MeteorObserver">
     </style>
 
     <style name="Theme.MeteorObserver.Red">
         <item name="colorPrimary">@android:color/black</item>
         <item name="colorPrimaryDark">@android:color/black</item>
         <item name="colorAccent">@color/material_red_a700</item>
-
         <item name="colorControlHighlight">@color/mo_ripple</item>
         <item name="android:textColorHighlight">@color/mo_text_highlight</item>
 
@@ -32,12 +39,18 @@
         <item name="actionBarStyle">@style/Widget.AppCompat.ActionBar</item>
     </style>
 
-    <style name="Theme.MeteorObserver" parent="Base.Theme.MeteorObserver">
+    <style name="Theme.MeteorObserver.Red.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.MeteorObserver.Dialog.Alert" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">@color/material_red_500</item>
         <item name="android:textColorHighlight">@color/mo_text_highlight</item>
+
+        <item name="textAppearanceListItemSecondary">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="listPreferredItemHeight">56dp</item>
+        <item name="listPreferredItemHeightLarge">72dp</item>
     </style>
 
     <style name="Theme.MeteorObserver.Red.Dialog.Alert" parent="Theme.AppCompat.Dialog.Alert">
@@ -52,8 +65,11 @@
         <item name="android:textColorSecondary">@color/material_red_a700</item>
         <item name="android:textColorTertiary">@color/material_red_a700</item>
 
-        <item name="android:windowBackground">@drawable/dialog_background</item>
+        <item name="android:windowBackground">@drawable/dialog_background_red</item>
         <item name="android:colorBackground">@color/material_grey_900</item>
 
+        <item name="textAppearanceListItemSecondary">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="listPreferredItemHeight">56dp</item>
+        <item name="listPreferredItemHeightLarge">72dp</item>
     </style>
 </resources>
